--- a/index.html
+++ b/index.html
@@ -27,29 +27,28 @@
           <img
             class="header__logo-image"
             src="./images/logo-black.svg"
-            alt="logo"
+            alt="Логотип оно тебе надо"
           />
         </a>
-        <div class="header__address address">
-          <address>
-            <a href="tel:+99995555555">+9 999 555 5555</a><br />
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </address>
-          <p>наб. Принсенграхт 263-265,<br />Амстердам</p>
-        </div>
+        <address class="header__address address">
+          <a href="tel:+99995555555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>
       </nav>
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">он<span class="letter__o">о</span></span>
+          о<span class="letter-spacing-extended">н</span>о
           <span class="aligned-text aligned-text_center"
-            >теб<span class="letter__e">е</span></span
+            >те<span class="letter-spacing-extended">бе</span></span
           >
           <span class="aligned-text aligned-text_right"
-            >н<span class="letters__ado"
-              >ад<span class="lettes_last">о</span></span
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
             ></span
           >
         </h1>
@@ -121,12 +120,12 @@
             <img
               class="about__logo-image"
               src="./images/logo-white.svg"
-              alt="logo"
+              alt="Логотип оно тебе надо"
             />
           </div>
         </div>
         <div class="container_with_text">
-          <h4 class="about__title">Об аукционе</h4>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -148,13 +147,11 @@
         </div>
       </section>
       <footer class="footer">
-        <div class="address">
-          <address>
-            <a href="tel:+99995555555">+9 999 555 5555</a><br />
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </address>
-          <p>наб. Принсенграхт 263-265,<br />Амстердам</p>
-        </div>
+        <address class="address">
+          <a href="tel:+99995555555">+9 999 555 5555</a><br />
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>
         <nav class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-list-item">
@@ -171,12 +168,20 @@
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/yt.svg" alt="yt" />
+              <img
+                class="footer__social-icon"
+                src="./images/yt.svg"
+                alt="Логотип Ютуб"
+              />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/vk.svg" alt="vk" />
+              <img
+                class="footer__social-icon"
+                src="./images/vk.svg"
+                alt="Логотип Вконтакте"
+              />
             </a>
           </li>
           <li class="footer__social-list-item">
@@ -184,7 +189,7 @@
               <img
                 class="footer__social-icon"
                 src="./images/pinterest.svg"
-                alt="pinterest"
+                alt="Логотип Пинтерест"
               />
             </a>
           </li>
